--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,64 +1,42 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Button from '../components/Button'
+import NamedComponent from '../components/NamedComponent'
 ---
 
 <Layout title="Tailwind Exercises">
 	<main class="w-full max-w-4xl m-auto p-4">
-		<article>
+		<article class="pb-6">
 			<header>
 				<h2 class="inline-block text-3xl font-bold text-white bg-sky-500 mb-3 px-2">Buttons</h2>
 			</header>
 			<div>
-				<section>
-					<h3 class="text-2xl font-bold mb-2">Standard Buttons</h3>
-					<div class="flex gap-4 px-2">
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 bg-sky-400 hover:bg-sky-500 text-white text-base font-semibold rounded-md"
-								type="button">
-								Follow
-							</button>
-							<p class="font-bold text-sm text-gray-400">Primary</p>
-						</div>
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 bg-rose-500 hover:bg-rose-600 text-white text-base font-semibold rounded-md"
-								type="button">
-								Delete
-							</button>
-							<p class="font-bold text-sm text-gray-400">Danger</p>
-						</div>
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 bg-slate-400 hover:bg-slate-500 text-white text-base font-semibold rounded-md"
-								type="button">
-								Cancel
-							</button>
-							<p class="font-bold text-sm text-gray-400">Default</p>
-						</div>
+				<section class="pb-2">
+					<h3 class="text-2xl font-bold mb-2">Solid Buttons</h3>
+					<div class="flex flex-wrap gap-4 p-2">
+						<NamedComponent name="Primary">
+							<Button btnStyle="primary">Follow</Button>
+						</NamedComponent>
+						<NamedComponent name="Danger">
+							<Button btnStyle="danger">Delete</Button>
+						</NamedComponent>
+						<NamedComponent name="Default">
+							<Button>Cancel</Button>
+						</NamedComponent>
 					</div>
 				</section>
 				<section>
 					<h3 class="text-2xl font-bold mb-2">Outlined Buttons</h3>
-					<div class="flex gap-4 px-2">
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 outline -outline-offset-2 outline-sky-400 text-sky-400 text-base font-semibold rounded-md hover:bg-sky-400 hover:text-white"
-								type="button">
-								Follow
-							</button>
-							<p class="font-bold text-sm text-gray-400">Primary</p>
-						</div>
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 outline -outline-offset-2 outline-rose-500 text-rose-500 text-base font-semibold rounded-md hover:bg-rose-500 hover:text-white"
-								type="button">
-								Delete
-							</button>
-							<p class="font-bold text-sm text-gray-400">Danger</p>
-						</div>
-						<div class="flex flex-col items-center gap-1">
-							<button class="px-4 py-2 outline -outline-offset-2 outline-slate-400 text-slate-400 text-base font-semibold rounded-md hover:bg-slate-400 hover:text-white"
-								type="button">
-								Cancel
-							</button>
-							<p class="font-bold text-sm text-gray-400">Default</p>
-						</div>
+					<div class="flex flex-wrap gap-4 px-2">
+						<NamedComponent name="Primary">
+							<Button btnStyle="primaryOutline">Follow</Button>
+						</NamedComponent>
+						<NamedComponent name="Danger">
+							<Button btnStyle="dangerOutline">Delete</Button>
+						</NamedComponent>
+						<NamedComponent name="Default">
+							<Button btnStyle="outline">Cancel</Button>
+						</NamedComponent>
 					</div>
 				</section>
 			</div>
